force-app/main/default/objects/Test_Case_Execution__c/Test_Case_Execution__c.object-meta.xml
<CustomObject>
    <label>Test Case Execution</label>
    <nameField>
        <displayFormat>SP-TCE-{0000}</displayFormat>
        <label>Test Case Execution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Case Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>