force-app/main/default/objects/Test_Case_Execution__c/fields/Blocked__c.field-meta.xml
<CustomField>
    <fullName>Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to denote that the test case execution is blocked</description>
    <label>Blocked</label>
    <type>Checkbox</type>
</CustomField>