force-app/main/default/objects/Test_Case_Execution__c/fields/Completion_Status__c.field-meta.xml
<CustomField>
    <fullName>Completion_Status__c</fullName>
    <label>Completion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>😓</fullName>
            </value>
            <value>
                <fullName>😑</fullName>
            </value>
            <value>
                <fullName>😐</fullName>
            </value>
            <value>
                <fullName>🙂</fullName>
            </value>
            <value>
                <fullName>😀</fullName>
            </value>
            <value>
                <fullName>🤩</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>