force-app/main/default/objects/Test_Case_Execution__c/fields/Data_Input__c.field-meta.xml
<CustomField>
    <fullName>Data_Input__c</fullName>
    <description>Data Input</description>
    <label>Data Input</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>