force-app/main/default/objects/Test_Case_Execution__c/fields/Data_Output__c.field-meta.xml
<CustomField>
    <fullName>Data_Output__c</fullName>
    <description>Data Output</description>
    <label>Data Output</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>