force-app/main/default/objects/Test_Case_Execution__c/fields/Date_Tested__c.field-meta.xml
<CustomField>
    <fullName>Date_Tested__c</fullName>
    <description>Date Tested</description>
    <label>Date Tested</label>
    <type>Date</type>
</CustomField>