force-app/main/default/objects/Test_Case_Execution__c/fields/Test_Step_Executions_Passed__c.field-meta.xml
<CustomField>
    <fullName>Test_Step_Executions_Passed__c</fullName>
    <description>Displays the percentage of test step executions that have been passed successfully</description>
    <label>Test Step Executions Passed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>