force-app/main/default/objects/Test_Case_Execution__c/fields/TestCase__c.field-meta.xml
<CustomField>
    <fullName>TestCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Test Case which is related to this Test Case Execution</description>
    <label>TestCase</label>
    <referenceTo>TestCase__c</referenceTo>
    <relationshipLabel>Test Case Executions</relationshipLabel>
    <relationshipName>Test_Case_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>