force-app/main/default/objects/Test_Case_Execution__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who tested the Test Case</description>
    <label>Tester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Test_Case_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>