force-app/main/default/objects/Test_Case_Execution__c/fields/Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related User Stories,Defect,Improvements of Test Case</description>
    <label>Work Item</label>
    <referenceTo>WorkItem__c</referenceTo>
    <relationshipLabel>Test Case Executions</relationshipLabel>
    <relationshipName>Test_Case_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>